# coea-level-based-lean

./: .env.example  .gitignore  .structurelint.yml  AGENTS.md  CRNRanking.lean  CheckTypes.lean  CoEALevelBased.lean  CoevolutionDeepBounds.lean  FifoTrapObstruction.lean  GameTheoryMinimax.lean  GapClosureSolutions.lean  Hoeffding.lean  HoeffdingBridge.lean  LBTCoupling.lean  LBTPreconditions.lean  LeCamLowerBound.lean  LintOptions.lean  Main.lean  Makefile  MeanRankingLemma.lean  NonseparablePairSkeleton.lean  README.md  RLocalGames.lean  SignedEpistasisSkeleton.lean  SimulationCoupling.lean  SimultaneousPersistence.lean  TimeVaryingLinearRuntime.lean  TrapGameEA.lean  UnifiedPaperValidation.lean  WitnessGameDrift.lean  WitnessVeto.lean  _check_thm.lean  deep_think_rlocal.md  lake-manifest.json  lakefile.lean  mathprover.toml  sonar-project.properties
.mathprover/: DECORATORS.md  README.md  graph.json  meta.json.example
DriftTheorems/: AdditiveDrift.lean  MultiplicativeDrift.lean  NegativeDrift.lean
Duality/: Common.lean  ExtendedFields.lean  FarkasBartl.lean  FarkasBasic.lean  FarkasSpecial.lean  LinearProgramming.lean  LinearProgrammingB.lean
agents/: config.py  dispatch.py  lean_pipeline.py  preview.py  prompts.py  pyproject.toml  resource_guard.py  router.py  run_registry.py
agents/backends/: aristotle.py  goedel.py
docs/: DECORATORS.md  mathprover.md
mathprover-ui/: .gitignore  README.md  package.json  pnpm-lock.yaml
openspec/: config.yaml
proofs/: PLAN.md  WORKER_PROMPT.md
scripts/: bootstrap_graph.py  build_graph.py  ci-build-proofwidgets.sh  (+3 more)
(+95 files in other folders)
