[project]
name = "mathprover-agents"
version = "0.1.0"
description = "Dispatch router for Goedel MLX and Aristotle provers"
requires-python = ">=3.10"
dependencies = [
    "aristotlelib>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
mathprover-dispatch = "dispatch:main"

[tool.uv]
package = false
